Resolves #364